--- a/src/app/dashboard/action-plan/action-plan-auditor/action-plan-auditor.component.html
+++ b/src/app/dashboard/action-plan/action-plan-auditor/action-plan-auditor.component.html
@@ -6,11 +6,11 @@
                     <div class="card-header">
                         <div class="header_card">
                             <h3 class="card-title">Audit Plan ( Evidence Received )</h3>
-                            <div class="d-flex align-items-center">
+                  <!--           <div class="d-flex align-items-center">
                                 <h6 class="mr-1 mb-0">Filters:-</h6>
                                 <input type="text" class="form-control mr-1 filter_css" placeholder="Vendor Name ">
                                 <input type="text" class="form-control mr-1 filter_css" placeholder="Date ">
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="card-body">
@@ -24,7 +24,6 @@
                                         <th>Planned Start Date </th>
                                         <th>Planned End Date</th>
                                         <th>No Of Observation</th>
-                                        <th>Categories</th>
                                         <th>Score</th>
                                         <th>Action Plan </th>    
                                     </tr>
@@ -37,10 +36,9 @@
                                         <td>{{item.plannedStartDate | date:dateFormat}}</td>
                                         <td>{{item.plannedEndDate | date:dateFormat}}</td>
                                         <td>{{item.observationCount}}</td>
-                                        <td></td>
                                         <td>  <p><b>{{item.score}}</b></p></td>
                                         <td>
-                                            <button (click)="goToCategory(item.id)"  [ngClass]="{'submit': item.actionPlanStatus === 'Submitted', 'to_be_submit' : item.actionPlanStatus === 'To be Submitted' }">{{item.actionPlanStatus}}</button>
+                                            <button (click)="goToCategory(item.id)" [ngClass]="{'submit': item.actionPlanStatus === 'Submitted', 'to_be_submit' : item.actionPlanStatus === 'To be Submitted','to_be_received': item.actionPlanStatus === 'To be Received','accepted': item.actionPlanStatus ==='Accepted','rejected': item.actionPlanStatus ==='Rejected' }">{{item.actionPlanStatus}}</button>
                                         </td>
                                     </tr>
                                 </tbody>
