--- a/src/app/dashboard/masters/categories/categories-edit/categories-edit.component.html
+++ b/src/app/dashboard/masters/categories/categories-edit/categories-edit.component.html
@@ -21,6 +21,7 @@
                         <div class="form-group">
                           <label class="form_label">Status</label>
                           <select class="form-control inputbox_css" formControlName="active" (click)="checkStatus($event)">
+                          <option ></option>
                           <option [value]="true">Active</option>
                           <option [value]="false">In Active</option>
                           
