--- a/src/app/dashboard/action-plan/action-plan-list/action-plan-list.component.html
+++ b/src/app/dashboard/action-plan/action-plan-list/action-plan-list.component.html
@@ -46,7 +46,7 @@
                                         </td>
                                         <td>
                                             <button (click)="goToCategory(item.id)"
-                                            [ngClass]="{'submit': item.actionPlanStatus === 'Submitted', 'to_be_submit' : item.actionPlanStatus === 'To be Submitted' }" >{{item.actionPlanStatus}}</button>
+                                            [ngClass]="{'submit': item.actionPlanStatus === 'Submitted', 'to_be_submit' : item.actionPlanStatus === 'To be Submitted','to_be_received': item.actionPlanStatus === 'To be Received','accepted': item.actionPlanStatus ==='Accepted','rejected': item.actionPlanStatus ==='Rejected' }" >{{item.actionPlanStatus}}</button>
                                         </td>
                                     </tr>
                                 </tbody>
