--- a/src/app/dashboard/action-plan/action-plan-vendor/action-plan-vendor.component.html
+++ b/src/app/dashboard/action-plan/action-plan-vendor/action-plan-vendor.component.html
@@ -42,7 +42,7 @@
                                         <td> <p><b>{{item.score}}</b></p></td>
                                         <td>
                                             <button (click)="goToCategory(item.id)" 
-                                            [ngClass]="{'submit': item.actionPlanStatus === 'Submitted', 'to_be_submit' : item.actionPlanStatus === 'To be Submitted' }">{{item.actionPlanStatus}}</button>
+                                            [ngClass]="{'submit': item.actionPlanStatus === 'Submitted', 'to_be_submit' : item.actionPlanStatus === 'To be Submitted','to_be_received': item.actionPlanStatus === 'To be Received','accepted': item.actionPlanStatus ==='Accepted','rejected': item.actionPlanStatus ==='Rejected' }">{{item.actionPlanStatus}}</button>
                                         </td>
                                     </tr>
                                 </tbody>
