--- a/src/app/dashboard/evidence/evidence-receive-category/evidence-receive-category.component.html
+++ b/src/app/dashboard/evidence/evidence-receive-category/evidence-receive-category.component.html
@@ -12,7 +12,7 @@
                         <div class="table-responsive max_hei_table">
                             <table id="" class="table table-bordered table-hover">
                                 <thead>
-                                    <tr class=" text-center sticky_header">
+                                    <tr class="sticky_header">
                                         <th>S.No</th>
                                         <th>Categories </th>
                                         <th>Observation</th>
