--- a/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
@@ -40,6 +40,7 @@
             <div class="flex_direction_media">
               <button class="btn btn-primary mr-1" (click)="viewSummary()">
                 View Summary Details</button>
+              <button class="btn btn-primary mr-1" (click)="reportSubmit(draft)">Save as draft</button>
               <button class="btn btn-danger mr-1" data-toggle="modal" data-target="#executive-summary">Vendor Summary
               </button>
               <button (click)="getEmployeeList()" class="btn btn-success mr-1" data-toggle="modal" data-target="#submit" [disabled]="isNotCompleteRegulation">Submit</button>
@@ -56,7 +57,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Executive Summary</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Vendor Summary</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
