--- a/src/app/dashboard/audit-plan/view-plan/view-plan-edit/view-plan-edit.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-edit/view-plan-edit.component.html
@@ -92,6 +92,11 @@
                                             formControlName="auditeeEmail">
                                     </div>
                                 </div>
+                                <span class="pt-2">
+                                    <a
+                                     (click)="getAttachment()"
+                                        style="color:#ff7900">Click here to View Resource</a>
+                                </span>
                             </div>
                         </div>
                         <div class="card-footer" >
