--- a/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
@@ -95,6 +95,7 @@
                       <th>Vendor Name</th>
                       <th>Location</th>
                       <th>Any Other Location</th>
+                      <th>Categoty</th>
                       <th>Planned Start Date </th>
                       <th>Planned End Date</th>
                       <th>Report Release Date</th>
@@ -116,6 +117,7 @@
                       <td>{{item.vendorName}}</td>
                       <td>{{item.locationName}}</td>
                       <td>{{item.otherLocation}}</td>
+                      <td>{{item.categoryName}}</td>
                       <td>{{item.plannedStartDate | date:dateFormate}}</td>
                       <td>{{item.plannedEndDate | date:dateFormate}}</td>
                       <td>{{item.reportReleaseDate | date:dateFormate}}</td>
