--- a/src/app/dashboard/manage-audit/manage-audit-question-details/manage-audit-question-details.component.css
+++ b/src/app/dashboard/manage-audit/manage-audit-question-details/manage-audit-question-details.component.css
@@ -34,3 +34,9 @@
     align-items: center;
     margin-top: 2px;
 }
+.input-css-check{
+  width: 18px;
+    height: 18px;
+    position: relative;
+    top: 7px;
+}
