--- a/src/app/dashboard/manage-audit/manage-audit-initiate/manage-audit-initiate.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-initiate/manage-audit-initiate.component.html
@@ -26,6 +26,12 @@
                             </div>
                             <div class="col-sm-4">
                                 <div class="form-group">
+                                    <label class="form_label">Vendor Category</label>
+                                    <input type="text" class="form-control inputbox_css" formControlName="vendorCategory" [attr.disabled]="disabled">
+                                </div>
+                            </div>
+                            <div class="col-sm-4">
+                                <div class="form-group">
                                     <label class="form_label">Start Date</label>
                                     <input type="date" class="form-control inputbox_css" formControlName="plannedStartDate"
                                     [attr.disabled]="disabled">
