--- a/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
@@ -14,11 +14,12 @@
                 <div class="table-responsive max_hei_table">
                   <table class="table table-bordered">
                     <thead>
-                      <tr class="text-center">
+                      <tr class="">
                         <th>S.No</th>
                         <th>Category</th>
                         <th>Completion Status</th>
                         <th class="w_226">Score</th>
+                        <th>Percentage</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -29,6 +30,9 @@
                         </td>
                         <td (click)="details(item.categoryId)">{{item.categoryScore
                         }}/{{item.totalCount}}</td>
+                        <td><div class="progress">
+                          <div class="progress-bar bg-success" role="progressbar" style="width: 75%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{item.percentageCompletion}}%</div>
+                        </div></td>
                       </tr>
                     </tbody>
                   </table>
@@ -36,17 +40,20 @@
               </div>
             </div>
           </div>
-          <div class="card-footer">
-            <div class="flex_direction_media">
+            <div class="flex_direction_media vie-footer">
               <button class="btn btn-primary mr-1" (click)="viewSummary()">
                 View Summary Details</button>
-              <button class="btn btn-primary mr-1" (click)="reportSubmit(draft)">Save as draft</button>
-              <button class="btn btn-danger mr-1" data-toggle="modal" data-target="#executive-summary">Vendor Summary
+              <button class="btn btn-danger mr-1" (click)="openVendorModal()">Vendor Attendees
               </button>
-              <button (click)="getEmployeeList()" class="btn btn-success mr-1" data-toggle="modal" data-target="#submit" [disabled]="isNotCompleteRegulation">Submit</button>
-              <button (click)="back()" class="btn btn-default">Back</button>
+              <button class="btn btn-danger mr-1"(click)="openCriticalModal()">Critical Observation
+              </button>
             </div>
+          <div class="card-footer">
+          <div class="flex_direction_media">
+            <button (click)="getEmployeeList()" class="btn btn-success mr-1" data-toggle="modal" data-target="#submit" >Submit As Final</button>
+            <button (click)="back()" class="btn btn-default">Back</button>
           </div>
+        </div> 
         </div>
       </div>
     </div>
